Updated to java 21 and gradle 8.9